Changes in version: JM_0.8-1

  * the new function xtable.jointModel() in conjunction with the xtable package can be used to produce a LaTeX table with the results of joint modeling analysis.
  
  * the new function simulateJM() and the simulate() method for objects of class 'jointModel' can be used to simulate data from a joint model.


==============================

Changes in version: JM_0.8-0

  * the new argument 'interFact' added in jointModel() allows the specification of interaction terms between the longitudinal outcome and baseline covariates.

  * for all joint models fitted in JM there is now the option to use a pseudo adaptive Gauss-Hermite rule. This is much faster than the default option and produces results of equal or better quality.

  * a predict() method has been added. Currently this only calculates fitted average longitudinal evolutions based on the information provided in the 'newdata' argument.

  * a new algorithm for calculating the starting values has been implemented. In most of the cases these will be closer to the MLEs than in the previous version.

  * some small changes have been made in the default Gauss-Hermite quadrature rule. This will result in minor changes in parameter estimates, standard errors and log-likelihood value compared to the previous version.

  * a bug has been corrected in the code used to specify the design matrix for the random effects in the longitudinal outcome, that did not allow this matrix not to be a subset of the design matrix of the fixed effects.


==============================

Changes in version: JM_0.7-0

  * the new function rocJM() has been added that calculates time-dependent ROC curves and the corresponding AUCs for joint models.

  * methods "weibull-AFT-GH", "weibull-PH-GH", "piecewise-PH-GH", and "spline-PH-GH" support now the true slope parameterization. This is invoked be specifying the 'parameterization' and 'derivForm' arguments accordingly.


==============================
