@@ -1,7 +1,7 @@
 Package: JM
 Title: Joint Modelling of Longitudinal and Survival Data
-Version: 0.8-1
-Date: 2011-01-27
+Version: 0.8-2
+Date: 2011-02-14
 Author: Dimitris Rizopoulos <d.rizopoulos@erasmusmc.nl>
 Maintainer: Dimitris Rizopoulos <d.rizopoulos@erasmusmc.nl>
 Description: Shared parameter models for the joint modelling of
@@ -12,6 +12,6 @@ LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
 URL: http://rwiki.sciviews.org/doku.php?id=packages:cran:jm
-Packaged: 2011-01-27 07:41:48 UTC; D. Rizopoulos
+Packaged: 2011-02-14 07:42:45 UTC; D. Rizopoulos
 Repository: CRAN
-Date/Publication: 2011-01-27 10:52:21
+Date/Publication: 2011-02-14 16:38:20
