@@ -7,7 +7,7 @@ function (time, ii) {
         P <- time / 2
         st <- P * (sk + 1)
         data.id2 <- data.id[id.GK, ]
-        data.id2[timeVar] <- pmax(st - lag, 0)
+        data.id2[[timeVar]] <- pmax(st - lag, 0)
         out <- list(st = st, wk = wk, P = P)
         if (parameterization %in% c("value", "both")) {
             mfX <- model.frame(TermsX, data = data.id2)
@@ -35,16 +35,18 @@ function (time, ii) {
         Up <- Tiq[, 2:(Q+1)]
         T <- Up - Lo
         P <- T / 2
-        P[P < sqrt(.Machine$double.eps)] <- as.numeric(NA)
+        if (!all(P < sqrt(.Machine$double.eps)))
+            P[P < sqrt(.Machine$double.eps)] <- as.numeric(NA)
         P1 <- (Up + Lo) / 2
         st <- rep(P, each = nk) * rep(sk, Q) + rep(P1, each = nk)
         data.id2 <- data.id[rep(ii, each = nk*Q), ]
-        data.id2[timeVar] <- pmax(st - lag, 0)
+        data.id2[[timeVar]] <- pmax(st - lag, 0)
+        data.id2 <- data.id2[!is.na(st), ]
         id.GK <- rep(ii, sum(!is.na(st)))
-        mfX <- model.frame(TermsX, data = data.id2)
-        mfZ <- model.frame(TermsZ, data = data.id2)
         out <- list(st = st, wk = wk, P = P, ind = ind)
         if (parameterization %in% c("value", "both")) {
+            mfX <- model.frame(TermsX, data = data.id2)
+            mfZ <- model.frame(TermsZ, data = data.id2)
             out$Xs <- model.matrix(formYx, mfX)
             out$Zs <- model.matrix(object$formYz, mfZ)
             out$Ws.intF.vl <- WintF.vl[id.GK, , drop = FALSE]
